Compiler/tests/typing/bad/testfile-return-4.rs

fn f() -> i32 { return 42; true }
fn main() {}
